# app/Models/Customer.php
@@ -8,12 +8,5 @@ use Illuminate\Database\Eloquent\Model;
 class Customer extends Model
 {
     use HasFactory;
-    protected $fillable = [
-        "name",
-        "card_id",
-        "address",
-        "telephone",
-        "email",
-        "currancy_exchange_rate"
-    ];
+    
 }
